# itools

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.in  ical.c  idate.c  ipraytime.c  ireminder  ireminder.pl
debian/: changelog  control  copyright  rules
doc/: ical.1  idate.1  ipraytime.1  ireminder.1
