# $Id: configure.in,v 1.5 2004/12/27 16:20:02 thamer Exp $

AC_PREREQ(2.57)
AC_INIT([itool],[0.6.1],[developer-at-arabeyes.org])

# Checks for Link/Compile options
SYSTEM=`uname -s`
if [ test "$SYSTEM" = "SunOS" ]; then
   LDFLAGS="$LDFLAGS -rpath-link /usr/include"
fi

# Checks for programs
AC_PROG_CC

# Checks for libraries
AC_HAVE_LIBRARY(m, , [AC_MSG_ERROR(library 'libm' is missing)])

#AC_CHECK_LIB(itl, getPrayerTimes, , [AC_MSG_ERROR(library 'itl' is missing)])

# Specify ITL specific lib (wish AC_CHECK_LIB did this !!)
if test "x${prefix}" = "xNONE"; then
  my_prefix=${ac_default_prefix}
else
  my_prefix=${prefix}
fi

ITL_LIB="$my_prefix/lib/itl /usr/lib/"

for i in $ITL_LIB; do
  echo -n "checking for -litl in $i... "
  ( [ test -e $i/libitl.so ] || [ test -e $i/libitl.a ] ) && ITL_LIB_FOUND=$i && break;
done;

if [ test "$ITL_LIB_FOUND" = "/usr/lib/" ]; then
  LIBS="$LIBS -litl"
  echo "yes"
elif [ test -n "$ITL_LIB_FOUND" ]; then
  LDFLAGS="$LDFLAGS -L$ITL_LIB_FOUND -Xlinker -rpath -Xlinker $ITL_LIB_FOUND"
  LIBS="$LIBS -litl"
  echo "yes"
else
  echo "no"	
  echo "library 'itl' is missing"
  exit;
fi

AC_CHECK_MEMBER(struct tm.tm_gmtoff, [AC_DEFINE(HAVE_TM_GMTOFF)], ,
                [#include <time.h>])
AC_PATH_PROG(LD, ld)
AC_SUBST(LD)

# Checks for header files
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
AC_CHECK_HEADERS([itl/prayer.h itl/hijri.h], , [AC_MSG_ERROR(ITL header files missing)])

# Checks for typedefs and structures
AC_C_CONST
AC_TYPE_UID_T
AC_STRUCT_TM

# Checks for library functions
AC_CHECK_FUNCS([strcasecmp])

# Generate output
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
